objects/B2B_HDM_API_Config__mdt.object
<CustomObject>
    <description>This metadata is used to store the client Id and client secret of HDM salesforce to call the SF APIs to get Braintree Dealer access token</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>B2B HDM API Config</label>
    <pluralLabel>B2B HDM API Configs</pluralLabel>
</CustomObject>